cc_library(
    name = "radial_profiles",
    srcs = ["radial_profiles.cc"],
    hdrs = ["radial_profiles.h"],
    visibility = ["//vmecpp/vmec:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
        "//vmecpp/common/vmec_indata:vmec_indata",
        "//vmecpp/common/flow_control:flow_control",
        "//vmecpp/vmec/vmec_constants",
        "//vmecpp/vmec/radial_partitioning:radial_partitioning",
        "//vmecpp/vmec/handover_storage:handover_storage",
        "//vmecpp/vmec/profile_parameterization_data:profile_parameterization_data",
    ],
)

cc_test(
    name = "radial_profiles_test",
    srcs = ["radial_profiles_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:solovev_analytical",
        "//vmecpp/test_data:solovev_no_axis",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_free_bdy",
    ],
    deps = [
        ":radial_profiles",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/common/flow_control:flow_control",
        "//vmecpp/common/fourier_basis_fast_poloidal",
        "//vmecpp/vmec/boundaries:boundaries",
        "//vmecpp/vmec/vmec:vmec",
    ],
    size = "small",
)
