cc_library(
    name = "vmec",
    srcs = ["vmec.cc"],
    hdrs = ["vmec.h"],
    visibility = ["//vmecpp:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/log:log",
        "//vmecpp/common/util:util",
        "//vmecpp/common/sizes:sizes",
        "//vmecpp/common/vmec_indata:vmec_indata",
        "//vmecpp/vmec/boundaries:boundaries",
        "//vmecpp/vmec/vmec_constants",
        "//vmecpp/vmec/profile_parameterization_data:profile_parameterization_data",
        "//vmecpp/vmec/fourier_geometry:fourier_geometry",
        "//vmecpp/vmec/fourier_forces:fourier_forces",
        "//vmecpp/vmec/fourier_velocity:fourier_velocity",
        "//vmecpp/vmec/radial_profiles:radial_profiles",
        "//vmecpp/vmec/ideal_mhd_model:ideal_mhd_model",
        "//vmecpp/vmec/handover_storage:handover_storage",
        "//vmecpp/vmec/radial_partitioning:radial_partitioning",
        "//vmecpp/vmec/output_quantities:output_quantities",
        "//vmecpp/free_boundary/free_boundary_base:free_boundary_base",
        "//vmecpp/free_boundary/nestor:nestor",
    ],
)

cc_test(
    name = "vmec_test",
    srcs = ["vmec_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:solovev_no_axis",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_free_bdy",
    ],
    deps = [
        ":vmec",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
    ],
    size = "small",
)

cc_test(
    name = "vmec_hot_restart_test",
    srcs = ["vmec_hot_restart_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cth_like_free_bdy",
    ],
    deps = [
        ":vmec",
        "@abseil-cpp//absl/log:check",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//vmecpp/vmec/output_quantities:output_quantities",
    ],
    size = "small",
)
