add_subdirectory(biest)
add_subdirectory(dual_solver)
add_subdirectory(external_magnetic_field)
add_subdirectory(free_boundary_base)
add_subdirectory(laplace_solver)
add_subdirectory(mgrid_provider)
add_subdirectory(nestor)
add_subdirectory(only_coils)
add_subdirectory(regularized_integrals)
add_subdirectory(singular_integrals)
add_subdirectory(surface_geometry)
add_subdirectory(tangential_partitioning)
add_subdirectory(vac2)
set (vmecpp_sources "${vmecpp_sources}" PARENT_SCOPE)
