filegroup(
    name = "mgrid_non_symmetric",
    visibility = ["//vmecpp/tools/makegrid:__subpackages__"],
    srcs = [
        "coils.test_non_symmetric",
        "extcur.test_non_symmetric",
        "mgrid_test_non_symmetric.nc",
    ],
)

filegroup(
    name = "mgrid_symmetric_even",
    visibility = ["//vmecpp/tools/makegrid:__subpackages__"],
    srcs = [
        "coils.test_symmetric_even",
        "extcur.test_symmetric_even",
        "mgrid_test_symmetric_even.nc",
    ],
)

filegroup(
    name = "mgrid_symmetric_odd",
    visibility = ["//vmecpp/tools/makegrid:__subpackages__"],
    srcs = [
        "coils.test_symmetric_odd",
        "extcur.test_symmetric_odd",
        "mgrid_test_symmetric_odd.nc",
    ],
)
