cc_library(
    name = "sizes",
    srcs = ["sizes.cc"],
    hdrs = ["sizes.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
        "//vmecpp/common/util:util",
        "//vmecpp/common/vmec_indata:vmec_indata",
    ],
)
