# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_library(
    name = "sizes",
    srcs = ["sizes.cc"],
    hdrs = ["sizes.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
        "//vmecpp/common/util:util",
        "//vmecpp/common/vmec_indata:vmec_indata",
    ],
)

cc_test(
    name = "sizes_ntheta_debug_test",
    srcs = ["sizes_ntheta_debug_test.cc"],
    deps = [
        ":sizes",
        "//vmecpp/common/vmec_indata:vmec_indata",
        "@googletest//:gtest_main",
    ],
    size = "small",
)
