# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_library(
    name = "biest",
    srcs = ["biest.cc"],
    hdrs = ["biest.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/log:check",
        "@biest",
        "//vmecpp/common/util:util",
        "//vmecpp/common/sizes:sizes",
        "//vmecpp/free_boundary/free_boundary_base:free_boundary_base",
    ],
)
